--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Beauty by EB</title>
+    </head>
     <body>
-        
+        <h1>Beauty By EB</h1>
+        <a href="index.html">Home</a>
     </body>
 </html>
