--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1>Beauty By EB</h1>
-        <a href="index.html">Home</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="cart.html">Your Cart</a></li>
+        </ul>
     </body>
 </html>
