standard page look to products html

--- a/products.html
+++ b/products.html
@@ -1,1 +1,15 @@
-Hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Beauty by EB</title>
+    </head>
+    <body>
+        <h1>Beauty By EB</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="cart.html">Your Cart</a></li>
+        </ul>
+    </body>
+</html>
+
