Added contact link and github link to index

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
         <title>Beauty by EB</title>
     </head>
     <body>
+        <div>
         <h1>Beauty By EB</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="cart.html">Your Cart</a></li>
+            <li><a href="#contact_info">Contact</a></li>
         </ul>
+        </div>
+        <footer>
+            <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
+            <p id="contact_info">Contact</p>
+        </footer>
     </body>
 </html>
