--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="cart.html">Your Cart</a></li>
+            <li><a href="#contact_info">Contact</a></li>
         </ul>
         </div>
         <footer>
