--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <div>
         <h1>Beauty By EB</h1>
         <ul>
+            <li><a href="login.html">Login</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="cart.html">Your Cart</a></li>
