--- a/login.html
+++ b/login.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
 <html>
-    
+    <body>
+        <h1>Beauty By EB</h1>
+        <h3>Login/Sign Up</h3>
+        <ul>
+            <li>
+                <label for="text">Full Name: </label>
+                <input type="text" id="text" name="varText" placeholder="Your Name Here*" required pattern="[Aa].*" />
+            </il>
+            <li>
+                <label for="text">Email: </label>
+                <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
+            </li>
+            <li>
+                <label for="password">Password: </label>
+                <input type="password" id="password" name="varPassword" placeholder="Password*"/>
+            </li>
+        </ul>
+        <a href="index.html">
+            <button type="submit">Submit</button>
+        </a>
+    </body>
 </html>
