--- a/cart.html
+++ b/cart.html
@@ -13,6 +13,22 @@
             <li><a href="#contact_info">Contact</a></li>
         </ul>
         </div>
+        <div>
+            <img src="/Images/pineapple_900x.webp" alt="Pineapple hair oil" width="300" height="300">
+            <p>Price: $25.00</p>
+            <ul>
+                <li>
+                <a href="billing.html">
+                    <button type="submit">Checkout</button>
+                </a>
+                </li>
+                <li>
+                <a href="index.html">
+                    <button type="submit">Cancel</button>
+                </a>
+                </li>
+            </ul>
+        </div>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
             <p id="contact_info">Contact</p>
