adding contact button to login

--- a/login.html
+++ b/login.html
@@ -2,6 +2,12 @@
 <html>
     <body>
         <h1>Beauty By EB</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="cart.html">Your Cart</a></li>
+            <li><a href="#contact_info">Contact</a></li>
+        </ul>
         <h3>Login/Sign Up</h3>
         <ul>
             <li>
@@ -20,5 +26,9 @@
         <a href="index.html">
             <button type="submit">Submit</button>
         </a>
+        <footer>
+            <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
+            <p id="contact_info">Contact</p>
+        </footer>
     </body>
 </html>
