Checkpoint for billing html

--- a/billing.html
+++ b/billing.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <title>Beauty By EB</title>
+    </head>
+    <body>
+        <div>
+            <h1>Beauty By EB</h1>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="cart.html">Your Cart</a></li>
+                <li><a href="#contact_info">Contact</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Delivery Information</h3>
+            
+        </div>
+    </body>
 </html>
