added nav tag to all files

--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div>
-        <h1>Beauty By EB</h1>
+        <h1><header>Beauty By EB</header></h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
