--- a/billing.html
+++ b/billing.html
@@ -4,7 +4,7 @@
         <title>Beauty By EB</title>
     </head>
     <body>
-        <div>
+        <nav>
             <h1>Beauty By EB</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -12,7 +12,7 @@
                 <li><a href="cart.html">Your Cart</a></li>
                 <li><a href="#contact_info">Contact</a></li>
             </ul>
-        </div>
+        </nav>
         <div>
             <h3>Delivery Information</h3>
             <li>
