--- a/cart.html
+++ b/cart.html
@@ -4,15 +4,15 @@
         <title>Beauty by EB</title>
     </head>
     <body>
-        <div>
-        <h1><header>Beauty By EB</header></h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="cart.html">Your Cart</a></li>
-            <li><a href="#contact_info">Contact</a></li>
-        </ul>
-        </div>
+        <nav>
+            <h1>Beauty By EB</h1>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="cart.html">Your Cart</a></li>
+                <li><a href="#contact_info">Contact</a></li>
+            </ul>
+        </nav>
         <div>
             <img src="/Images/pineapple_900x.webp" alt="Pineapple hair oil" width="300" height="300">
             <p>Price: $25.00</p>
