--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <title>Beauty by EB</title>
     </head>
     <body>
-        <nav>
+        <main>
             <h1>Beauty By EB</h1>
+        </main>
+        <nav>
             <ul>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="index.html">Home</a></li>
