--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
                 <li><a href="#contact_info">Contact</a></li>
             </ul>
         </nav>
+        <h3>Our Mission</h3>
+        <p>
+            At Beauty by EB, our mission is to provide the finest <i>all-natural</i> beauty products that help our loyal clients not only look their best but feel more 
+            <i>confident</i> every day. Whether you're seeking <i>thicker, fuller</i> hair or a <i>radiant complexion,</i> we offer premium products at a fraction of the cost. Why pay 
+            more when you can have the best? Choose Beauty by EB and be <i>Eternamente Bella—beautiful, always.</i>
+        </p>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
             <p id="contact_info">Contact</p>
