placeholder for 3rd service website

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <i>confident</i> every day. Whether you're seeking <i>thicker, fuller</i> hair or a <i>radiant complexion,</i> we offer premium products at a fraction of the cost. Why pay 
             more when you can have the best? Choose Beauty by EB and be <i>Eternamente Bella—beautiful, always.</i>
         </p>
+        <p>
+            Placeholder text for a 3rd service party that will generate inspirational quotes
+        </p>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
             <p id="contact_info">Contact</p>
