--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,9 @@
                 </a>
                 </li>
             </ul>
+            <p>
+                The cart page will keep track of the items placed in the cart by the user and any previous items purchased by a user with an account in a database.
+            </p>
         </div>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
