--- a/login.html
+++ b/login.html
@@ -28,6 +28,12 @@
         <a href="index.html">
             <button type="submit">Submit</button>
         </a>
+        <p>
+            The following text will be data stored in the database behind the scenes<br>
+            Full name: John Doe<br>
+            Email: isds29<br>
+            Password: *********
+        </p>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
             <p id="contact_info">Contact</p>
