--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,10 @@
             <p>
                 The cart page will keep track of the items placed in the cart by the user and any previous items purchased by a user with an account in a database.
             </p>
+            <p>
+                In the cart there will be live data being shown to the user the stock of the items they are interested in, how many people have the same 
+                products in their cart, and how many purchases have been made every minute they stay in the cart (placeholder for websocket).
+            </p>
         </div>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
