--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
         <title>Beauty by EB</title>
-    </head>
+    </header>
     <body>
         <main>
             <h1>Beauty By EB</h1>
