adding the main tags to these html files

--- a/billing.html
+++ b/billing.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
         <title>Beauty By EB</title>
-    </head>
+    </header>
     <body>
         <nav>
             <h1>Beauty By EB</h1>
@@ -13,51 +13,53 @@
                 <li><a href="#contact_info">Contact</a></li>
             </ul>
         </nav>
-        <div>
-            <h3>Delivery Information</h3>
-            <li>
-                <label for="text">First Name: </label>
-                <input type="text" id="text" name="varText" placeholder="First Name*" required pattern="[Aa].*" />
-                <label for="text">Last Name: </label>
-                <input type="text" id="text" name="varText" placeholder="Last Name*" required pattern="[Aa].*" />
-            </il>
-            <li>
-                <label for="text">Address: </label>
-                <input type="text" id="text" name="varText" placeholder="Start Typing Address*" required pattern="[Aa].*" />
-            </il>
-            <li>
-                <label for="text">Email: </label>
-                <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
-                <label for="text">Phone Number: </label>
-                <input type="text" id="text" name="varText" placeholder="Phone Number*" required pattern="[Aa].*" />
-            </il> 
-        </div>
-        <div>
-            <h3>Billing Information</h3>
-            <h5>Select Payment Method</h5>
-            <li>
-                <label for="optgroup">OptGroup: </label>
-                <select id="optgroup" name="varOptGroup">
-                  <optgroup label="Payment Method">
-                    <option>Debit/Credit Card</option>
-                    <option>Apple Pay</option>
-                  </optgroup>
-            </li>
-            <li>
-                <label for="text">Card Number: </label>
-                <input type="text" id="text" name="varText" placeholder="Enter Card Number*" required pattern="[Aa].*" /> 
-            </li>
-            <li>
-                <label for="text">EXP. Date: </label>
-                <input type="text" id="text" name="varText" placeholder="MM/YY*" required pattern="[Aa].*" />
-                <label for="text">CVV: </label>
-                <input type="text" id="text" name="varText" placeholder="CVV*" required pattern="[Aa].*" />
-            </li>
-            <li>
-                <a href="index.html">
-                    <button type="submit">Complete Order</button>
-                </a>
-            </li>
-        </div>
+        <main>
+            <div>
+                <h3>Delivery Information</h3>
+                <li>
+                    <label for="text">First Name: </label>
+                    <input type="text" id="text" name="varText" placeholder="First Name*" required pattern="[Aa].*" />
+                    <label for="text">Last Name: </label>
+                    <input type="text" id="text" name="varText" placeholder="Last Name*" required pattern="[Aa].*" />
+                </il>
+                <li>
+                    <label for="text">Address: </label>
+                    <input type="text" id="text" name="varText" placeholder="Start Typing Address*" required pattern="[Aa].*" />
+                </il>
+                <li>
+                    <label for="text">Email: </label>
+                    <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
+                    <label for="text">Phone Number: </label>
+                    <input type="text" id="text" name="varText" placeholder="Phone Number*" required pattern="[Aa].*" />
+                </il> 
+            </div>
+            <div>
+                <h3>Billing Information</h3>
+                <h5>Select Payment Method</h5>
+                <li>
+                    <label for="optgroup">OptGroup: </label>
+                    <select id="optgroup" name="varOptGroup">
+                    <optgroup label="Payment Method">
+                        <option>Debit/Credit Card</option>
+                        <option>Apple Pay</option>
+                    </optgroup>
+                </li>
+                <li>
+                    <label for="text">Card Number: </label>
+                    <input type="text" id="text" name="varText" placeholder="Enter Card Number*" required pattern="[Aa].*" /> 
+                </li>
+                <li>
+                    <label for="text">EXP. Date: </label>
+                    <input type="text" id="text" name="varText" placeholder="MM/YY*" required pattern="[Aa].*" />
+                    <label for="text">CVV: </label>
+                    <input type="text" id="text" name="varText" placeholder="CVV*" required pattern="[Aa].*" />
+                </li>
+                <li>
+                    <a href="index.html">
+                        <button type="submit">Complete Order</button>
+                    </a>
+                </li>
+            </div>
+        </main>
     </body>
 </html>
