--- a/cart.html
+++ b/cart.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Beauty by EB</title>
-    </head>
+    <header>
+        <title>Beauty By EB</title>
+    </header>
     <body>
         <nav>
             <h1>Beauty By EB</h1>
@@ -13,29 +13,31 @@
                 <li><a href="#contact_info">Contact</a></li>
             </ul>
         </nav>
-        <div>
-            <img src="/Images/pineapple_900x.webp" alt="Pineapple hair oil" width="300" height="300">
-            <p>Price: $25.00</p>
-            <ul>
-                <li>
-                <a href="billing.html">
-                    <button type="submit">Checkout</button>
-                </a>
-                </li>
-                <li>
-                <a href="index.html">
-                    <button type="submit">Cancel</button>
-                </a>
-                </li>
-            </ul>
-            <p>
-                The cart page will keep track of the items placed in the cart by the user and any previous items purchased by a user with an account in a database.
-            </p>
-            <p>
-                In the cart there will be live data being shown to the user the stock of the items they are interested in, how many people have the same 
-                products in their cart, and how many purchases have been made every minute they stay in the cart (placeholder for websocket).
-            </p>
-        </div>
+        <main>
+            <div>
+                <img src="/Images/pineapple_900x.webp" alt="Pineapple hair oil" width="300" height="300">
+                <p>Price: $25.00</p>
+                <ul>
+                    <li>
+                    <a href="billing.html">
+                        <button type="submit">Checkout</button>
+                    </a>
+                    </li>
+                    <li>
+                    <a href="index.html">
+                        <button type="submit">Cancel</button>
+                    </a>
+                    </li>
+                </ul>
+                <p>
+                    The cart page will keep track of the items placed in the cart by the user and any previous items purchased by a user with an account in a database.
+                </p>
+                <p>
+                    In the cart there will be live data being shown to the user the stock of the items they are interested in, how many people have the same 
+                    products in their cart, and how many purchases have been made every minute they stay in the cart (placeholder for websocket).
+                </p>
+            </div>
+        </main>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
             <p id="contact_info">Contact</p>
