--- a/products.html
+++ b/products.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
         <title>Beauty by EB</title>
-    </head>
+    </header>
     <body>
         <nav>
             <h1>Beauty By EB</h1>
@@ -13,6 +13,9 @@
                 <li><a href="#contact_info">Contact</a></li>
             </ul>
         </nav>
+        <main>
+            <p>Here the different products, prices, and filters to help users find what they want will be</p>
+        </main>
         <footer>
             <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
             <p id="contact_info">Contact</p>
