--- a/login.html
+++ b/login.html
@@ -10,24 +10,26 @@
                 <li><a href="#contact_info">Contact</a></li>
             </ul>
         </nav>
-        <h3>Login/Sign Up</h3>
-        <ul>
-            <li>
-                <label for="text">Full Name: </label>
-                <input type="text" id="text" name="varText" placeholder="Your Name Here*" required pattern="[Aa].*" />
-            </il>
-            <li>
-                <label for="text">Email: </label>
-                <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
-            </li>
-            <li>
-                <label for="password">Password: </label>
-                <input type="password" id="password" name="varPassword" placeholder="Password*"/>
-            </li>
-        </ul>
-        <a href="index.html">
-            <button type="submit">Submit</button>
-        </a>
+        <main>
+            <h3>Login/Sign Up</h3>
+            <ul>
+                <li>
+                    <label for="text">Full Name: </label>
+                    <input type="text" id="text" name="varText" placeholder="Your Name Here*" required pattern="[Aa].*" />
+                </il>
+                <li>
+                    <label for="text">Email: </label>
+                    <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
+                </li>
+                <li>
+                    <label for="password">Password: </label>
+                    <input type="password" id="password" name="varPassword" placeholder="Password*"/>
+                </li>
+            </ul>
+            <a href="index.html">
+                <button type="submit">Submit</button>
+            </a>
+        </main>
         <p>
             The following text will be data stored in the database behind the scenes<br>
             Full name: John Doe<br>
