--- a/login.html
+++ b/login.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <nav>
-            <h1>Beauty By EB</h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="cart.html">Your Cart</a></li>
-                <li><a href="#contact_info">Contact</a></li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <h1>Beauty By EB</h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="cart.html">Your Cart</a></li>
+                    <li><a href="#contact_info">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
             <h3>Login/Sign Up</h3>
             <ul>
