--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
         <link rel="stylesheet" href="main.css" />
     </head>
     <body>
-        <header>    
-            <main>
-                <h1>Beauty By EB</h1>
-            </main>
-            <nav>
-                <ul>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="cart.html">Your Cart</a></li>
-                    <li><a href="#contact_info">Contact</a></li>
-                </ul>
-            </nav>
+        <header>  
+            <div class="navigation">  
+                <main>
+                    <h1 class="top_left">Beauty By EB</h1>
+                </main>
+                <nav>
+                    <ul>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="cart.html">Your Cart</a></li>
+                        <li><a href="#contact_info">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <h3>Our Mission</h3>
         <p>
