--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <h1 class="top_left">Beauty By EB</h1>
                 </main>
                 <nav>
-                    <ul>
+                    <ul class="top_right">
                         <li><a href="login.html">Login</a></li>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
@@ -30,8 +30,12 @@
             Placeholder text for a 3rd service party that will generate inspirational quotes
         </p>
         <footer>
-            <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
-            <p id="contact_info">Contact</p>
+            <div>
+                <ul class="footer" id="contact_info">
+                    <li><a href="https://github.com/Irabago55/Startup_CS_260">Github</a></li>
+                    <li><p>Contact</p></li>
+                </ul>
+            </div>
         </footer>
     </body>
 </html>
