--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <footer>
             <div>
                 <ul class="footer" id="contact_info">
-                    <li class="github"><a href="https://github.com/Irabago55/Startup_CS_260">Github</a></li>
-                    <li><p class="social_media">Follow us</p></li>
-                    <li><p class="email">Email</p></li>
+                    <li class="github"><strong>Github</strong></li>
+                    <li><strong class="social_media">Follow us</strong></li>
+                    <li><strong class="email">Email</strong></li>
                 </ul>
             </div>
         </footer>
