--- a/index.html
+++ b/index.html
@@ -31,12 +31,26 @@
         </p>
         <footer>
             <div>
-                <ul class="footer" id="contact_info">
-                    <li class="github"><strong>Github</strong></li>
-                    <li><strong class="social_media">Follow us</strong></li>
-                    <li><strong class="email">Email</strong></li>
-                </ul>
+              <ul class="footer" id="contact_info">
+                <li class="github">
+                  <strong>Github</strong>
+                  <!-- GitHub link -->
+                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                </li>
+                <li class="social_media">
+                  <strong>Follow us</strong>
+                  <!-- Social media links -->
+                  <a href="https://www.facebook.com/profile.php?id=100063623010158" target="_blank">Facebook</a><br>
+                  <a href="https://www.tiktok.com/@beautybyeb" target="_blank">TikTok</a><br>
+                  <a href="https://www.instagram.com/original_beautyeb/" target="_blank">Instagram</a>
+                </li>
+                <li class="email">
+                  <strong>Email</strong>
+                  <!-- Email link -->
+                  <a href="mailto:info@beautybyeb.com">info@beautybyeb.com</a>
+                </li>
+              </ul>
             </div>
-        </footer>
+          </footer>
     </body>
 </html>
