basic image carousel. Needs work

--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
                 </nav>
             </div>
         </header>
+        <div class="carousel">
+            <div class="carousel-inner">
+              <input type="radio" id="img1" name="carousel" checked>
+              <input type="radio" id="img2" name="carousel">
+              <input type="radio" id="img3" name="carousel">
+          
+              <div class="carousel-item" id="carousel-item1">
+                <img src="Images/IMG_0010.jpg" alt="Image 1">
+              </div>
+              <div class="carousel-item" id="carousel-item2">
+                <img src="Images/IMG_0011.jpg" alt="Image 2">
+              </div>
+              <div class="carousel-item" id="carousel-item3">
+                <img src="Images/IMG_0012.jpg" alt="Image 3">
+              </div>
+          
+              <!-- Dots to navigate between slides -->
+              <div class="carousel-controls">
+                <label for="img1" class="carousel-dot"></label>
+                <label for="img2" class="carousel-dot"></label>
+                <label for="img3" class="carousel-dot"></label>
+              </div>
+            </div>
+          </div>          
         <h3>Our Mission</h3>
         <p>
             At Beauty by EB, our mission is to provide the finest <i>all-natural</i> beauty products that help our loyal clients not only look their best but feel more 
