--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="main.css" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <header>  
@@ -19,31 +20,32 @@
                     </ul>
                 </nav>
             </div>
-        </header>
-        <div class="carousel">
-            <div class="carousel-inner">
-              <input type="radio" id="img1" name="carousel" checked>
-              <input type="radio" id="img2" name="carousel">
-              <input type="radio" id="img3" name="carousel">
-          
-              <div class="carousel-item" id="carousel-item1">
-                <img src="Images/IMG_0010.jpg" alt="Image 1">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="Images/" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="Images/IMG_0011.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="Images/IMG_0012.jpg" alt="Third slide">
+                </div>
               </div>
-              <div class="carousel-item" id="carousel-item2">
-                <img src="Images/IMG_0011.jpg" alt="Image 2">
-              </div>
-              <div class="carousel-item" id="carousel-item3">
-                <img src="Images/IMG_0012.jpg" alt="Image 3">
-              </div>
-          
-              <!-- Dots to navigate between slides -->
-              <div class="carousel-controls">
-                <label for="img1" class="carousel-dot"></label>
-                <label for="img2" class="carousel-dot"></label>
-                <label for="img3" class="carousel-dot"></label>
-              </div>
-            </div>
-          </div>          
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>          
         <h3>Our Mission</h3>
         <p>
             At Beauty by EB, our mission is to provide the finest <i>all-natural</i> beauty products that help our loyal clients not only look their best but feel more 
@@ -76,5 +78,6 @@
               </ul>
             </div>
           </footer>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
