--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="Images/" alt="First slide">
+                  <img class="d-block w-100" src="Images/Beauty_By_EB_IMG.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="Images/IMG_0011.jpg" alt="Second slide">
+                  <img class="d-block w-100" src="Images/Skin_Care_IMG.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="Images/IMG_0012.jpg" alt="Third slide">
+                  <img class="d-block w-100" src="Images/Hair_Care_IMG.jpg" alt="Third slide">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
               </a>
               <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
               </a>
             </div>          
         <h3>Our Mission</h3>
