login nearly complete

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="github">
                   <strong>Github</strong>
                   <!-- GitHub link -->
-                  <a href="https://github.com/your-profile" target="_blank">Visiour GitHub</a>
+                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
                 </li>
                 <li class="social_media">
                   <strong>Follow us</strong>
