--- a/login.html
+++ b/login.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="login.css" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA_Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,
+        initial-scale=1.0">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    </head>
     <body>
         <header>
-            <nav>
-                <h1>Beauty By EB</h1>
-                <ul>
+            <nav class="navigation">
+                <h1 class="top_left">Beauty By EB</h1>
+                <ul class="top_right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="cart.html">Your Cart</a></li>
@@ -12,7 +20,32 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <div class="login-body">
+            <div class="wrapper">
+                <form action="">
+                    <h1>Login</h1>
+                    <div class="input-box">
+                        <input type="text" placeholder="Username" required>
+                        <i class='bx bxs-user' ></i>
+                    </div>
+                    <div class="input-box">
+                        <input type="password" placeholder="Password" required>
+                        <i class='bx bxs-lock-alt' ></i>
+                    </div>
+                    <div class="remember-forgot">
+                        <label><input type="checkbox"> Remember me</label>
+                        <a href="#"> Forgot password?</a>
+                    </div>
+
+                    <button type="submit" class="btn">Login</button>
+
+                    <div class="register-link">
+                        <p>Don't have an account? <a href="#">Register</a></p>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- <main>
             <h3>Login/Sign Up</h3>
             <ul>
                 <li>
@@ -37,10 +70,29 @@
             Full name: John Doe<br>
             Email: isds29<br>
             Password: *********
-        </p>
+        </p> -->
         <footer>
-            <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
-            <p id="contact_info">Contact</p>
-        </footer>
+            <div>
+              <ul class="footer" id="contact_info">
+                <li class="github">
+                  <strong>Github</strong>
+                  <!-- GitHub link -->
+                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                </li>
+                <li class="social_media">
+                  <strong>Follow us</strong>
+                  <!-- Social media links -->
+                  <a href="https://www.facebook.com/profile.php?id=100063623010158" target="_blank">Facebook</a><br>
+                  <a href="https://www.tiktok.com/@beautybyeb" target="_blank">TikTok</a><br>
+                  <a href="https://www.instagram.com/original_beautyeb/" target="_blank">Instagram</a>
+                </li>
+                <li class="email">
+                  <strong>Email</strong>
+                  <!-- Email link -->
+                  <a href="mailto:info@beautybyeb.com">info@beautybyeb.com</a>
+                </li>
+              </ul>
+            </div>
+          </footer>
     </body>
 </html>
