reference the cart css file

--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="cart.css" />
+    </head>
     <body>
         <header> 
             <nav>
