--- a/cart.html
+++ b/cart.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <header> 
-            <nav>
-                <h1>Beauty By EB</h1>
-                <ul>
+            <nav class="navigation">
+                <h1 class="top_left">Beauty By EB</h1>
+                <ul class="top_right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="cart.html">Your Cart</a></li>
@@ -41,8 +41,27 @@
             </div>
         </main>
         <footer>
-            <a href="https://github.com/Irabago55/Startup_CS_260">Github</a>
-            <p id="contact_info">Contact</p>
-        </footer>
+            <div>
+              <ul class="footer" id="contact_info">
+                <li class="github">
+                  <strong>Github</strong>
+                  <!-- GitHub link -->
+                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                </li>
+                <li class="social_media">
+                  <strong>Follow us</strong>
+                  <!-- Social media links -->
+                  <a href="https://www.facebook.com/profile.php?id=100063623010158" target="_blank">Facebook</a><br>
+                  <a href="https://www.tiktok.com/@beautybyeb" target="_blank">TikTok</a><br>
+                  <a href="https://www.instagram.com/original_beautyeb/" target="_blank">Instagram</a>
+                </li>
+                <li class="email">
+                  <strong>Email</strong>
+                  <!-- Email link -->
+                  <a href="mailto:info@beautybyeb.com">info@beautybyeb.com</a>
+                </li>
+              </ul>
+            </div>
+          </footer>
     </body>
 </html>
