--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,46 @@
             </nav>
         </header>   
         <main>
-            <div>
+            <section class="cart">
+                <h2>Your Cart</h2>
+                <div class="cart-item">
+                    <div class="product-img">
+                        <img src="Images/pineapple_900x.webp" alt="Product Image">
+                    </div>
+                    <div class="product-info">
+                        <h3>Pineapple Hair Growth Oil</h3>
+                        <p>Description</p>
+                        <p>Quantity: 1</p>
+                        <button class="cancel-button">Cancel</button>
+                    </div>
+                </div>
+                <div class="shipping">
+                    <p>Shipping: Arrives by Fri, Sep 20</p>
+                </div>
+            </section>
+            <section class="summary">
+                <h2>Summary</h2>
+                <p>Subtotal: <span>$76.99</span></p>
+                <p>Shipping & Handling: <span>$7.00</span></p>
+                <p>Estimated Tax: <span>$5.12</span></p>
+                <p>Total: <span>$89.11</span></p>
+                <button class="checkout"></button>
+                <button class="PayPal">PayPal</button>
+            </section>
+            <section class="suggestions">
+                <h2>You Might Also Like</h2>
+                <div class="suggested-item">
+                    <img src="Images/pineapple_900x.webp" alt="Product Image">
+                    <p>Product Name</p>
+                    <p>Price: $30.00</p>
+                </div>
+                <div class="suggested-item">
+                    <img src="Images/pineapple_900x.webp" alt="Product Image">
+                    <p>Product Name</p>
+                    <p>Price: $25.00</p>
+                </div>
+            </section>
+            <!-- <div>
                 <img src="/Images/pineapple_900x.webp" alt="Pineapple hair oil" width="300" height="300">
                 <p>Price: $25.00</p>
                 <ul>
@@ -38,7 +77,7 @@
                     In the cart there will be live data being shown to the user the stock of the items they are interested in, how many people have the same 
                     products in their cart, and how many purchases have been made every minute they stay in the cart (placeholder for websocket).
                 </p>
-            </div>
+            </div> -->
         </main>
         <footer>
             <div>
