--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
                         <h3>Pineapple Hair Growth Oil</h3>
                         <p>Description</p>
                         <p>Quantity: 1</p>
-                        <button class="cancel-button">Cancel</button>
+                        <button class="cancel-button"><a href="index.html">Cancel</a></button>
                     </div>
                 </div>
                 <div class="shipping">
