I need to fix the cart buttons

--- a/cart.html
+++ b/cart.html
@@ -39,8 +39,8 @@
                 <p>Shipping & Handling: <span>$7.00</span></p>
                 <p>Estimated Tax: <span>$5.12</span></p>
                 <p>Total: <span>$89.11</span></p>
-                <button class="checkout"></button>
-                <button class="PayPal">PayPal</button>
+                <button class="checkout"><a href="billing.html">Checkout</a></button>
+                <button class="paypal"><a href="billing.html">PayPal</a></button>
             </section>
             <section class="suggestions">
                 <h2>You Might Also Like</h2>
