the header css I might use

--- a/cart.html
+++ b/cart.html
@@ -54,6 +54,11 @@
                     <p>Product Name</p>
                     <p>Price: $25.00</p>
                 </div>
+                <div class="suggested-item">
+                    <img src="Images/pineapple_900x.webp" alt="Product Image">
+                    <p>Product Name</p>
+                    <p>Price: $25.00</p>
+                </div>
             </section>
             <!-- <div>
                 <img src="/Images/pineapple_900x.webp" alt="Pineapple hair oil" width="300" height="300">
