got rid of paypal button, and billing has footer and header

--- a/cart.html
+++ b/cart.html
@@ -40,7 +40,7 @@
                 <p>Estimated Tax: <span>$5.12</span></p>
                 <p>Total: <span>$89.11</span></p>
                 <button class="checkout"><a href="billing.html">Checkout</a></button>
-                <button class="paypal"><a href="billing.html">PayPal</a></button>
+                <!-- <button class="paypal"><a href="billing.html">PayPal</a></button> -->
             </section>
             <section class="suggestions">
                 <h2>You Might Also Like</h2>
