--- a/billing.html
+++ b/billing.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>   
+<html>
+    <head>
+        <link rel="stylesheet" href="billing.css" />
+    </head> 
     <body>
         <header>    
-            <nav>
-                <h1>Beauty By EB</h1>
-                <ul>
+            <nav class="navigation">
+                <h1 class="top_left">Beauty By EB</h1>
+                <ul class="top_right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="cart.html">Your Cart</a></li>
@@ -60,5 +63,28 @@
                 </li>
             </div>
         </main>
+        <footer>
+            <div>
+              <ul class="footer" id="contact_info">
+                <li class="github">
+                  <strong>Github</strong>
+                  <!-- GitHub link -->
+                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                </li>
+                <li class="social_media">
+                  <strong>Follow us</strong>
+                  <!-- Social media links -->
+                  <a href="https://www.facebook.com/profile.php?id=100063623010158" target="_blank">Facebook</a><br>
+                  <a href="https://www.tiktok.com/@beautybyeb" target="_blank">TikTok</a><br>
+                  <a href="https://www.instagram.com/original_beautyeb/" target="_blank">Instagram</a>
+                </li>
+                <li class="email">
+                  <strong>Email</strong>
+                  <!-- Email link -->
+                  <a href="mailto:info@beautybyeb.com">info@beautybyeb.com</a>
+                </li>
+              </ul>
+            </div>
+          </footer>
     </body>
 </html>
