--- a/billing.html
+++ b/billing.html
@@ -16,28 +16,75 @@
             </nav>
         </header>
         <main>
-            <div>
-                <h3>Delivery Information</h3>
-                <li>
-                    <label for="text">First Name: </label>
-                    <input type="text" id="text" name="varText" placeholder="First Name*" required pattern="[Aa].*" />
-                    <label for="text">Last Name: </label>
-                    <input type="text" id="text" name="varText" placeholder="Last Name*" required pattern="[Aa].*" />
-                </il>
-                <li>
-                    <label for="text">Address: </label>
-                    <input type="text" id="text" name="varText" placeholder="Start Typing Address*" required pattern="[Aa].*" />
-                </il>
-                <li>
-                    <label for="text">Email: </label>
-                    <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
-                    <label for="text">Phone Number: </label>
-                    <input type="text" id="text" name="varText" placeholder="Phone Number*" required pattern="[Aa].*" />
-                </il> 
+            <div class="billing-container">
+                <div class="delivery-section">
+                    <h3>Delivery Information</h3>
+                    <form>
+                        <label for="first-name">First Name*</label>
+                        <input type="text" id="first-name" name="first-name" required>
+
+                        <label for="last-name">Last Name*</label>
+                        <input type="text" id="last-name" name="last-name" required>
+
+                        <label for="address">Address*</label>
+                        <input type="text" id="address" name="address" required>
+
+                        <label for="email">Email*</label>
+                        <input type="text" id="email" name="email" required>
+
+                        <label for="phone-number">Phone Number*</label>
+                        <input type="text" id="phone-number" name="phone-number" required>
+                    </form>
+                    <!-- <li>
+                        <label for="text">First Name: </label>
+                        <input type="text" id="text" name="varText" placeholder="First Name*" required pattern="[Aa].*" />
+                        <label for="text">Last Name: </label>
+                        <input type="text" id="text" name="varText" placeholder="Last Name*" required pattern="[Aa].*" />
+                    </il>
+                    <li>
+                        <label for="text">Address: </label>
+                        <input type="text" id="text" name="varText" placeholder="Start Typing Address*" required pattern="[Aa].*" />
+                    </il>
+                    <li>
+                        <label for="text">Email: </label>
+                        <input type="text" id="text" name="varText" placeholder="Email*" required pattern="[Aa].*" />
+                        <label for="text">Phone Number: </label>
+                        <input type="text" id="text" name="varText" placeholder="Phone Number*" required pattern="[Aa].*" />
+                    </il> -->
+                </div>
+
+                <div class="order-review">
+                    <h3>Order Review</h3>
+                    <div class="product-box">
+                        <p>Product Here</p>
+                    </div>
+                    <p>Product Name: <span id="product-name">Product Name</span></p>
+                    <p>Description: <span id="product-desc">Product Description</span></p>
+                    <p>Quantity: <span id="quantity">1</span></p>
+                    <p>Total: <span id="total">$89.11</span></p>
+                </div>
             </div>
-            <div>
+
+            <div class="billing-section">
                 <h3>Billing Information</h3>
-                <h5>Select Payment Method</h5>
+                <form>
+                    <label for="card-number">Card Number*</label>
+                    <input type="text" id="card-number" name="card-number" required>
+
+                    <label for="exp-date">Exp. Date*</label>
+                    <input type="text" id="exp-date" name="exp-date" required placeholder="MM/YY">
+
+                    <label for="cvv">CVV*</label>
+                    <input type="text" id="cvv" name="cvv" required>
+
+                    <label for="payment-method">Select Payment Method</label>
+                    <div class="payment-method">
+                        <input type="radio" id="credit-card" name="payment-method" value="Credit/Debit Card" checked>
+                        <label for="credit-card">Credit or Debit Card</label>
+                    </div>
+                </form>
+                <button type="submit" class="confirm-btn"><a href="index.html">Confirm Order</a></button>
+                <!-- <h5>Select Payment Method</h5>
                 <li>
                     <label for="optgroup">OptGroup: </label>
                     <select id="optgroup" name="varOptGroup">
@@ -60,7 +107,7 @@
                     <a href="index.html">
                         <button type="submit">Complete Order</button>
                     </a>
-                </li>
+                </li> -->
             </div>
         </main>
         <footer>
