--- a/billing.html
+++ b/billing.html
@@ -56,7 +56,7 @@
                 <div class="order-review">
                     <h3>Order Review</h3>
                     <div class="product-box">
-                        <p>Product Here</p>
+                        <img src="Images/pineapple_900x.webp" alt="Pineapple Hair Oil" width="300px" height="300px">
                     </div>
                     <p>Product Name: <span id="product-name">Product Name</span></p>
                     <p>Description: <span id="product-desc">Product Description</span></p>
