--- a/billing.html
+++ b/billing.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="billing.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Billing Page - Eternamente Bella</title>
     </head> 
     <body>
         <header>    
