--- a/products.html
+++ b/products.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <nav class="navigation">
-            <h1>Beauty By EB</h1>
+            <h1 class="top_left">Beauty By EB</h1>
             <ul class="top_right">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="cart.html">Cart</a></li>
+                <li><a href="cart.html">Your Cart</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -45,11 +45,11 @@
                     <h4>Ratings</h4>
                     <ul>
                         <li><input type="checkbox" id="all_ratings" checked> All</li>
-                        <li>★★★★★</li>
-                        <li>★★★★☆</li>
-                        <li>★★★☆☆</li>
-                        <li>★★☆☆☆</li>
-                        <li>★☆☆☆☆</li>
+                        <li><input type="checkbox" id="all_ratings" >★★★★★</li>
+                        <li><input type="checkbox" id="all_ratings" >★★★★☆</li>
+                        <li><input type="checkbox" id="all_ratings" >★★★☆☆</li>
+                        <li><input type="checkbox" id="all_ratings" >★★☆☆☆</li>
+                        <li><input type="checkbox" id="all_ratings" >★☆☆☆☆</li>
                     </ul>
                 </div>
             </div>
