fix the padding in the filter section

--- a/products.html
+++ b/products.html
@@ -58,7 +58,8 @@
         <main>
             <div class="product_listing">
                 <div class="product_card">
-                    <div class="product_image">Product Image</div>
+                    <img src="Images/pineapple_900x.webp" alt="Pineapple Oil" height="150px" width="150px">
+                    <!-- <div class="product_image">Product Image</div> -->
                     <div class="product_description">
                         <h3>Product Name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
