--- a/products.html
+++ b/products.html
@@ -67,8 +67,41 @@
                         <div class="price">$49.99 <span class="old_price">$59.99</span></div>
                         <button>Add to Cart</button>
                     </div>
-                </div>
+                  </div>
                 <!-- Repeat for other products -->
+                <div class="product_card">
+                  <img src="Images/pineapple_900x.webp" alt="Pineapple Oil" height="150px" width="150px">
+                  <!-- <div class="product_image">Product Image</div> -->
+                  <div class="product_description">
+                      <h3>Product Name</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                      <div class="rating">★★★★★</div>
+                      <div class="price">$49.99 <span class="old_price">$59.99</span></div>
+                      <button>Add to Cart</button>
+                  </div>
+                </div>
+                <div class="product_card">
+                  <img src="Images/pineapple_900x.webp" alt="Pineapple Oil" height="150px" width="150px">
+                  <!-- <div class="product_image">Product Image</div> -->
+                  <div class="product_description">
+                      <h3>Product Name</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                      <div class="rating">★★★★★</div>
+                      <div class="price">$49.99 <span class="old_price">$59.99</span></div>
+                      <button>Add to Cart</button>
+                  </div>
+                </div>
+                <div class="product_card">
+                  <img src="Images/pineapple_900x.webp" alt="Pineapple Oil" height="150px" width="150px">
+                  <!-- <div class="product_image">Product Image</div> -->
+                  <div class="product_description">
+                      <h3>Product Name</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                      <div class="rating">★★★★★</div>
+                      <div class="price">$49.99 <span class="old_price">$59.99</span></div>
+                      <button>Add to Cart</button>
+                  </div>
+                </div>
             </div>
         </main>
     </div>
