--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Your Cart</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
