updated github link

--- a/billing.html
+++ b/billing.html
@@ -87,30 +87,7 @@
                     </div>
                 </form>
                 <button type="submit" class="confirm-btn"><a href="index.html">Confirm Order</a></button>
-                <!-- <h5>Select Payment Method</h5>
-                <li>
-                    <label for="optgroup">OptGroup: </label>
-                    <select id="optgroup" name="varOptGroup">
-                    <optgroup label="Payment Method">
-                        <option>Debit/Credit Card</option>
-                        <option>Apple Pay</option>
-                    </optgroup>
-                </li>
-                <li>
-                    <label for="text">Card Number: </label>
-                    <input type="text" id="text" name="varText" placeholder="Enter Card Number*" required pattern="[Aa].*" /> 
-                </li>
-                <li>
-                    <label for="text">EXP. Date: </label>
-                    <input type="text" id="text" name="varText" placeholder="MM/YY*" required pattern="[Aa].*" />
-                    <label for="text">CVV: </label>
-                    <input type="text" id="text" name="varText" placeholder="CVV*" required pattern="[Aa].*" />
-                </li>
-                <li>
-                    <a href="index.html">
-                        <button type="submit">Complete Order</button>
-                    </a>
-                </li> -->
+                </li> 
             </div>
         </main>
         <footer>
@@ -119,7 +96,7 @@
                 <li class="github">
                   <strong>Github</strong>
                   <!-- GitHub link -->
-                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                  <a href="https://github.com/Irabago55/Startup_CS_260.git" target="_blank">Visit our GitHub</a>
                 </li>
                 <li class="social_media">
                   <strong>Follow us</strong>
