--- a/cart.html
+++ b/cart.html
@@ -67,7 +67,7 @@
                 <li class="github">
                   <strong>Github</strong>
                   <!-- GitHub link -->
-                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                  <a href="https://github.com/Irabago55/Startup_CS_260.git" target="_blank">Visit our GitHub</a>
                 </li>
                 <li class="social_media">
                   <strong>Follow us</strong>
