--- a/login.html
+++ b/login.html
@@ -47,20 +47,14 @@
                 </form>
             </div>
         </div>
-        <!-- 
-        <p>
-            The following text will be data stored in the database behind the scenes<br>
-            Full name: John Doe<br>
-            Email: isds29<br>
-            Password: *********
-        </p> -->
+
         <footer>
             <div>
               <ul class="footer" id="contact_info">
                 <li class="github">
                   <strong>Github</strong>
                   <!-- GitHub link -->
-                  <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                  <a href="https://github.com/Irabago55/Startup_CS_260.git" target="_blank">Visit our GitHub</a>
                 </li>
                 <li class="social_media">
                   <strong>Follow us</strong>
