--- a/products.html
+++ b/products.html
@@ -111,7 +111,7 @@
             <ul class="footer" id="contact_info">
                 <li class="github">
                     <strong>Github</strong>
-                    <a href="https://github.com/your-profile" target="_blank">Visit our GitHub</a>
+                    <a href="https://github.com/Irabago55/Startup_CS_260.git" target="_blank">Visit our GitHub</a>
                 </li>
                 <li class="social_media">
                     <strong>Follow us</strong>
